Fix CSS for iframe so that Google presentation fullscreen button is visible on mobile devices
 It was still not working on iOS Safari

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -46,7 +46,8 @@ dl,
 ul, ol,
 hr,
 table, figure,
-div.iframe-margins,
+div.iframe-margins-right40,
+div.iframe-margins-right25,
 div.info-block {
   margin-bottom: $base-spacing-em;
 }
