--- a/_sass/_iframe.scss
+++ b/_sass/_iframe.scss
@@ -1,6 +1,10 @@
-div.iframe-margins {
+div.iframe-margins-right40,
+div.iframe-margins-right25 {
   margin-left: $margin-leftright-percentage;
-  margin-right: 35%;
+  margin-right: 40%;
+}
+div.iframe-margins-right25 {
+  margin-right: 25%;
 }
 @media print {
   .iframe-margins {
